--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,11 @@
 			<version>1.16.8</version>
 			<scope>provided</scope>
 		</dependency>
-
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
-			<optional>true</optional>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk</artifactId>
+			<version>1.11.106</version>
 		</dependency>
-
 	</dependencies>
 
     <repositories>
