--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.h2.console.path=/h2-console
 security.oauth2.resource.id=bcrypt
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
+aws.access_key_id=AKIAIT34F7FGVNAKKHKA
+aws.secret_access_key=DbnqchMeRFE
+aws.s3.bucket=
+aws.s3.region=us-east-1
+aws.cloudfront.url=
+
+path.local=
+
+
+
+
