--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,12 @@ spring.h2.console.path=/h2-console
 security.oauth2.resource.id=bcrypt
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-aws.access_key_id=asdfsadf
-aws.secret_access_key=fasdf
+aws.access_key_id=
+aws.secret_access_key=
 aws.s3.bucket=cursospring
 aws.s3.region=us-east-1
-aws.cloudfront.url=
+aws.cloudfront.url=http://dyj2rv5n84cgk.cloudfront.net/
 
-path.local=C:\\Users\\natan\\Pictures\\
 
 
 
